--- a/Flat-rate-log.html
+++ b/Flat-rate-log.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flat Rate Tracker</title>
+    <title>Flat Rate Log</title>
     <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
@@ -72,7 +72,7 @@
         </svg>
     );
 
-    const FlatRateTracker = () => {
+    const FlatRateLog = () => {
         const [jobs, setJobs] = useState(() => {
             const saved = localStorage.getItem('flatRateJobs');
             return saved ? JSON.parse(saved) : [];
@@ -477,7 +477,7 @@
         );
     };
 
-    ReactDOM.render(<FlatRateTracker />, document.getElementById('root'));
+    ReactDOM.render(<FlatRateLog />, document.getElementById('root'));
 </script>
 ```
 
